# paamindelse-om-afregning-af-indsatser-voksne

./: main.py  pyproject.toml
process/: config.py
