[project]
name = "process-template"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "automation-server-client",
    "kmd-nexus-client",
    "nexus-database-client",
    "odk-tools",
    "openpyxl"
]

[tool.uv.sources]
nexus-database-client = { git = "https://github.com/odense-rpa/nexus-database-client.git", rev = "main" }
odk-tools = { git = "https://github.com/odense-rpa/odk-tools.git", rev = "master" }
kmd-nexus-client = { git = "https://github.com/odense-rpa/nexus-client.git", rev = "release/0.2.0" }
automation-server-client = { git = "https://github.com/odense-rpa/automation-server-client.git", rev = "release/0.2.0" }
