[project]
name = "process-template"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "automation-server-client",
    "kmd-nexus-client",
    "nexus-database-client",
    "odk-tools",
    "openpyxl",
    "python-dateutil>=2.9.0.post0",
    "tzdata>=2025.2",
]

[tool.uv.sources]
nexus-database-client = { git = "https://github.com/odense-rpa/nexus-database-client.git", rev = "main" }
odk-tools = { git = "https://github.com/odense-rpa/odk-tools.git", rev = "master" }
kmd-nexus-client = { git = "https://github.com/odense-rpa/nexus-client.git", rev = "main" }
automation-server-client = { git = "https://github.com/odense-rpa/automation-server-client.git", rev = "release/0.2.0" }
